--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -48,6 +48,13 @@
   dismissal) on it will be done immediately by the scene manager (instead of being animated).
   Check DuiSceneManager::appearSceneWindow() documentation for more information.
 
+- Prestarting functionality extended to support multi-window applications. New enums
+  Dui::LazyShutdownMultiWindow and Dui::TerminateOnCloseMultiWindow to select wanted mode.
+- static void DuiApplication::setPrestarted(bool) to manually force release/restore if
+  a custom D-Bus service is used to show a specific window.
+- DuiWindow::setCloseOnLazyShutdown(bool) (and bool closeOnLazyShutdown() const) to
+  force close instead of hide during lazy shutdown.
+
 \subsection removed Removed or Renamed
 
 - Removed DuiPopupList's property batchSize and signals: itemModelChanged, selectionModelChanged.
