Changes: Removed DuiRmiClient and DuiRmiServer
RevBy: TrustMe
Details: Only DuiCompositor was using these, and it will take a private copy of the classes.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -57,6 +57,8 @@
 
 \subsection removed Removed or Renamed
 
+- DuiRmiClient and DuiRmiServer was removed.
+
 - Removed DuiPopupList's property batchSize and signals: itemModelChanged, selectionModelChanged.
 
 - DuiWindow's visibility signals enteredDisplay() and exitedDisplay() renamed to be
