Changes: API review changes: possibility to change and disable position indicator
RevBy: Daniel d'Andrada
Details: this patch allows adding a new position indicator to the pannable viewport.
It also allows disabling the position indicator.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -55,6 +55,8 @@
 - DuiWindow::setCloseOnLazyShutdown(bool) (and bool closeOnLazyShutdown() const) to
   force close instead of hide during lazy shutdown.
 
+- DuiPannableViewport now allows changing the position indicator to a custom made one.
+
 \subsection removed Removed or Renamed
 
 - DuiRmiClient and DuiRmiServer was removed.
