Changes: fixed incorrect documentation
RevBy: TrustMe
Details: translation entries should be under "Desktop Entry" group in
the desktop entries.

--- a/doc/src/i18n.dox
+++ b/doc/src/i18n.dox
@@ -718,7 +718,7 @@ shall contain at least two extra (key, value) pairs:
 
 For example:
 \code
-[DuiSettings]
+[Desktop Entry]
 # engineering english
 Name=Setting
 # logical name of "Setting"
