Changes: closed the table caption in i18n documentation
RevBy: TrustMe

--- a/doc/src/i18n.dox
+++ b/doc/src/i18n.dox
@@ -73,6 +73,7 @@ The DirectUI locale system uses the following main settings:
   <big><b>
     DuiLocale main settings
   </b></big>
+  </caption>
   <tr>
      <th>gconf key</th>
      <th>description</th>
