Changes: Removing DuiAbstractWidgetAnimation from public API.
RevBy: Tomas
Details:
 * DuiWidgetController::showAnimation() and hideAnimation() methods were removed.
 * Removed DuiWidgetView::contentPosition()
 * Style classes for DuiAbstractWidgetAnimation classes are no longer exported.
 * dismissAnimation() was removed from DuiSceneWindowStyle.
 * Some refactoring was done to widget animation classes to take them closer
   to the desired future scene window animations. That refactoring also solve
   the problems caused by the animations that were leaving behind garbage on
   the state of scene windows (like opacity 0.0 after a fade out).
 * Scene manager is now responsible for assigning the scene window animations,
   as it already does for the orientation change and page switching animations.

This patch leaves libdui free of the deprecated animation public API, therefore
opening the path for the work on the new animation classes without breaking
the ABI.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -134,6 +134,7 @@
   - pannedRange() was renamed to range()
   - pannedPos() was renamed to position()
   - updateSizePosData() was split into three new methods: setPosition(), setViewportSize() and setRange().
+
 - Libdui modularization:
   - moved src/applicationextension and src/mashup into new library libduiextensions.
   - moved src/settingslanguage into new library libduisettings.
@@ -146,6 +147,9 @@
   - Also make sure that you update duitheme in sync with this update, as
     it requires some changes in duitheme.
 
+- DuiWidgetController::showAnimation() and hideAnimation() methods were removed.
+- Removed DuiWidgetView::contentPosition().
+- dismissAnimation() was removed from DuiSceneWindowStyle.
 
 \section v0190
 
