Changes: Added a few guys to the credits.dox
RevBy: TrustMe
Added:
Antti Kervinen, Jussi Lind, Juha Lintula, Alexey Shilov, Pertti
Kellomäki, Nimika Keshri

--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -4,13 +4,15 @@ The following people have contributed code to DirectUI or otherwise helped out. 
 
 <pre>
 
- Ashish Gupta
  Abdiel Janulgue 
  Aleksandar Stojiljkovic
  Alexander Shalamov 
+ Alexey Shilov
  Alexey Smirnov
+ Antti Kervinen
  Armin Berres
  Arsi Antila
+ Ashish Gupta
  Bernd Lamecker
  Bjoern Schnabel
  Bradley T. Hughes 
@@ -25,20 +27,21 @@ The following people have contributed code to DirectUI or otherwise helped out. 
  Holger Schroeder
  Huiyuan Zhu
  Jakub Pavelek
- Janne Heikkilä 
- Jussi Petteri Lehtinen
+ James Cook
  Jani Lehmuskoski 
  Jani Mikkonen 
- John Tapsell 
+ Janne Heikkilä
+ Jarno Santeri Luoma-Nirva
  Johan Paul
+ John Tapsell
+ Juha Lintula
  Juha-Pekka Jokela 
  Juho Valonen 
+ Jussi Lind
+ Jussi Petteri Lehtinen
  Jussi Rautio 
  Kuisma Salonen 
  Leo Hynninen
- James Cook
- Jarno Santeri Luoma-Nirva
- Mohammad Anwari
  Maciej Jabłoński
  Marcin Miklas
  Marius Vollmer
@@ -47,11 +50,14 @@ The following people have contributed code to DirectUI or otherwise helped out. 
  Max Waterman 
  Michał Guminiak
  Mike Fabian
+ Mohammad Anwari
  Mu Yang
+ Nimika Keshri
  Pankaj Saharan 
  Patrick Spendrin 
  Pavan Patale 
  Pekka Vuorela
+ Pertti Kellomäki
  Stefan Hundhammer
  Steffen Imhof
  Tapani Pälli 
