--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -56,6 +56,8 @@
 
 - DuiPannableViewport now allows changing the position indicator to a custom made one.
 
+- MComboBox now have the progress indicator that can be shown for long taking selections.
+
 \subsection removed Removed or Renamed
 
 - DuiRmiClient and DuiRmiServer was removed.
