--- a/doc/src/prestart.dox
+++ b/doc/src/prestart.dox
@@ -1,18 +1,21 @@
 /*! \page prestart Prestartable application development How-To
 
-Prestarting reduces the launch time of an application to zero:
-applications are able to show their GUI immediately when
-requested. DUI supports prestarting for application services, that is,
-applications that are started from the Home screen (or some other
-canvas) by calling the \c launch() method in their DBus interface.
+Prestarting and lazy shutdown reduces the start-up time of an
+application to zero: the application is able to show its GUI
+immediately when requested. DUI supports prestarting and lazy shutdown
+of application services, that is, applications that are started by
+calling the \c launch() method in their DBus interface.
 
-The cost is that applications need to be started to a special \b
-prestarted \b state before launching, that is, they are running in the
-background in their mainloop but not showing anything.
+Prestarted applications are started to a special \b prestarted \b
+state by a daemon called \b Applifed. In that state they are running
+in the background in their mainloop but not showing anything. If
+terminated, Applifed re-prestarts them automatically.
 
-Note that not every application should be prestarted during boot. Prestarting is only 
-for some carefully selected set of critical applications. There's a dedicated
-daemon, \b Applifed, which controls the prestarts according to its configuration.
+Lazy shutdown allows an application to enter the \b prestarted \b
+state instead of terminating, when closed by user. This makes the next
+application start-up very fast. Automatically prestarted applications
+can use lazy shutdown as well.
+
 
 \section terminology Terminology
 
@@ -26,9 +29,9 @@ daemon, \b Applifed, which controls the prestarts according to its configuration
 
 - \b Prestarted \b state - the state where an application waits for
   launching. In user point of view the application is not running, but
-  it can be launched (switched to the running state) much faster than
-  executing it from scratch. Attempts to show a window in this state
-  are suppressed.
+  it can be started up (switched to the running state) much faster
+  than executing it from scratch. Attempts to show a window in this
+  state are suppressed.
 
 - \b Prestart \b mode - the property of an application that defines
   what happens to the application when it is closed. If not set,
@@ -45,9 +48,9 @@ daemon, \b Applifed, which controls the prestarts according to its configuration
 
 \section prestarting Prestarting an application
 
-If an application supports prestarting, it should always set the
-prestart mode with \c DuiApplication::setPrestartMode(), regardless of
-the commandline parameters and before using any other parts of the
+If an application supports prestarting, it must set the prestart mode
+with \c DuiApplication::setPrestartMode(), regardless of the
+commandline parameters and before using any other parts of the
 prestarting API. A recommended place to do this is during or right
 after instantiating the \c DuiApplication class.
 
@@ -55,7 +58,7 @@ Example:
 
 \code
 // example.cpp
-// Minimal LazyShutdown example
+// Minimal prestartable and lazy shutdownable application
 
 #include <DuiApplication>
 #include <DuiApplicationWindow>
@@ -78,11 +81,10 @@ Start the application to the prestarted state as follows.
 $ ./example -prestart &
 \endcode
 
-An application enters the prestarted state if and only if it is
-started with the \c -prestart commandline argument \b and it sets the
-prestart mode before showing any windows. If either one of these
-conditions does not hold, the application will enter to the running
-state.
+An application enters the prestarted state if it is started with the
+\c -prestart commandline argument \b and it sets the prestart mode
+before showing any windows. If either one of these conditions does not
+hold, the application will enter to the running state.
 
 The \c DuiApplicationWindow::show() method can be called even if the
 application is in the prestarted state. The window will not become
@@ -107,27 +109,31 @@ the prestarted state as follows:
 $ dbus-send --dest=com.nokia.example --type="method_call" /org/maemo/dui com.nokia.DuiApplicationIf.launch
 \endcode
 
-The application can react to launching by connecting the \c
+The application can react to launching by connecting to the \c
 DuiApplication::prestartReleased() signal, or by overriding
-DuiApplication::releasePrestart() event handler. The default event
-handler shows the active application window, if there is such a thing.
+DuiApplication::releasePrestart() handler. The default handler shows
+the active application window of a single-window application, if there
+is such a thing. For multiwindow applications the default handler does
+nothing.
 
 
 \section lazyshutdown Returning to the prestarted state
 
 Application returns from the running state to the prestarted state if
 its prestarted mode is set to \c Dui::LazyShutdown and user taps the
-close (or back) button.
+close (or back) button which closes the last window of the
+application, and the event is not ignored in the \c closeEvent
+handler.
 
 The application can react to restoring the prestarted state by
-connecting the \c DuiApplication::prestartRestored() signal, or by
+connecting to the \c DuiApplication::prestartRestored() signal, or by
 overriding the \c DuiApplication::restorePrestart() event handler. The
 default event handler hides the active application window.
 
 
-\section automaticprestart Automatic prestarting
+\section automaticprestart Lazy shutdown and automatic prestarting
 
-In order to enable lazy shutdown of the application and make the
+In order to enable lazy shutdown of the application or make the
 application prestartable during device boot, \c -prestart must be
 added to the \b .service \b-file of the application:
 
